kubedoc/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubedoc
  namespace: kubedoc
  labels:
    app: kubedoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubedoc
  template:
    metadata:
      labels:
        app: kubedoc
    spec:
      serviceAccountName: kubedoc
      containers:
      - name: kubedoc
        image: srinisbook/kubedoc
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
